# courseregistration

./: .gitignore  README.md
email-django/backend/backend/: settings.py  urls.py
email-django/backend/polls/: views.py
email-django/backend/polls/templates/: send.html
mq-rust/client/: Cargo.toml
mq-rust/client/examples/: pub_subject.rs  sub_subject.rs
mq-rust/client/src/: client.rs  error.rs  parser.rs
mq-rust/server/: Cargo.toml
mq-rust/server/src/: client.rs  error.rs  main.rs  parser.rs  server.rs  simple_sublist.rs
registry-go/: go.mod  go.sum
student-django/backend/backend/: settings.py  urls.py
student-django/backend/backend/schema/: student.py
student-django/backend/polls/: models.py  views.py
student-django/backend/polls/templates/: test_page.html
