[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log="0.4"
env_logger="0.7"
serde="1.0"
serde_json="1.0"
serde_derive = "1.0"
tokio = { version = "1.24.1", path = "../tokio/tokio",features = ["full"] } #{ version = "0.2",  features = ["full"] }
tokio-util ={ version = "0.7.4",path = "../tokio/tokio-util",  features = ["full"] } #{ version = "0.2",  features = ["full"] } #
rand="0.7"
bitflags="1.0"
lazy_static="1.0"
get_if_addrs="0.5"
futures = { version = "0.3.0", features = ["async-await"] }
bytes="0.5"